packages/dioxide/dioxide-1.0.1.tar.gz/dioxide-1.0.1/tests/type_checking/invalid/invalid_lifecycle_missing_dispose.py
"""
Invalid usage: @lifecycle decorator with missing dispose() method.

This file should FAIL mypy type checking because the class is missing
the required dispose() method.
"""

from dioxide import (
    lifecycle,
    service,
)


@service
@lifecycle
class DatabaseMissingDispose:
    """Service missing dispose() method - should fail mypy."""

    def __init__(self) -> None:
        self.connected = False

    async def initialize(self) -> None:
        """Has initialize but missing dispose."""
        self.connected = True


# This should fail type checking
db = DatabaseMissingDispose()
